Updated spacing issue

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -26,3 +26,8 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin grid-column {
+    display: grid;
+    grid-template-columns: repeat(10fr);
+}
