--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -61,13 +61,17 @@ body {
 
 .main-section-container {
     display: flex;
+    width: 100%;
     .box-container {
-        width: 800px;
         @include flex-center-horizontal;
+        // @include grid-column;
+        // min-width: 800px;
+        min-width: 300px;
+        width: 100%;
         margin: 2rem;
         .list-container {
+            // grid-column: 2 / 9;
             width: 100%;
-            min-width: 300px;
             margin: 0 auto;
             padding: 10px 20px;
             .Todo-section {
@@ -84,7 +88,6 @@ body {
     
                     .task-name {
                         font-size: 1.3rem;
-    
                     }
                     .task-description {
                         left: 20px;
